# clisudoku

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Sudokuplanung.md  numbers.txt
docs/superpowers/plans/: 2026-04-17-m1-solver-generator.md  2026-04-18-m2-minimal-tui.md  2026-04-28-hint-system.md  2026-04-30-designer-sudoku.md  2026-05-01-extreme-difficulty.md  2026-05-02-mouse-control.md  2026-05-06-expert-difficulty.md  2026-05-14-config-cli.md  2026-05-14-help-screen.md
docs/superpowers/specs/: 2026-04-28-hint-system-design.md  2026-04-30-designer-sudoku-design.md  2026-05-01-extreme-difficulty-design.md  2026-05-02-mouse-control-design.md  2026-05-06-expert-difficulty-design.md  2026-05-14-config-cli-design.md  2026-05-14-help-screen-design.md  easter-eggs.md
examples/: colors.rs
memory/: MEMORY.md  project_sudoku.md
src/: config.rs  db.rs  lib.rs  main.rs  timer.rs
src/generator/: difficulty.rs  mod.rs
src/hint/: mod.rs
src/hint/strategies/: mod.rs  tier1.rs  tier2.rs
src/i18n/: mod.rs
src/pattern/: mod.rs
src/puzzle/: event.rs  game_state.rs  grid.rs  mod.rs
src/solver/: backtracking.rs  box_line_reduction.rs  candidates.rs  expert.rs  hidden_pair.rs  hidden_single.rs  mod.rs  naked_pair.rs  naked_single.rs  naked_triple.rs  pointing_pair.rs  swordfish.rs  x_wing.rs
src/tui/: anim.rs  colors.rs  digit_style.rs  generating.rs  input.rs  mod.rs  seq_detect.rs  terminal.rs
src/tui/render/: boss.rs  cell.rs  confirm.rs  continue_screen.rs  firework.rs  (+10 more)
tests/: generator_integration.rs  hint_consistency.rs  solver_integration.rs  tui_smoke.rs
