[package]
name = "clisudoku"
version = "0.1.0"
edition = "2021"
authors = ["DocAtPrompt"]

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
sys-locale = "0.3"
serde = { version = "1", features = ["derive"] }
serde_arrays = "0.2.0"
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
